# kaiowa

./: .gitignore  .pylintrc  README.md  pyproject.toml
src/kaiowa/: exceptions.py
src/kaiowa/core/: __init__.py  criteria.py  selectables.py  terms.py  utils.py
