[tool.poetry]
name = "kaiowa"
version = "0.3.0"
description = "Asynchronous Database ORM for Python."
authors = ["Eduardo Rezende <eduardorbr7@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = "^20.8b1"
rstcheck = "^3.3.1"
Sphinx = "^3.2.1"
sphinx-rtd-theme = "^0.5.0"
asyncpg = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
